Link with wsock32 and ws2_32 on Windows

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project (crow_test)
- 
+
 
 set(TEST_SRCS
 unittest.cpp
@@ -10,6 +10,9 @@ add_executable(unittest ${TEST_SRCS})
 #target_link_libraries(unittest crow)
 target_link_libraries(unittest ${Boost_LIBRARIES})
 target_link_libraries(unittest ${CMAKE_THREAD_LIBS_INIT})
+if(WIN32)
+        target_link_libraries(unittest wsock32 ws2_32)
+endif()
 
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 # using Clang
